# LeaveConnectlast

./: .gitignore  .replit  README.md  app.py  init_db.py  models.py  pyproject.toml  replit.md  replit_auth.py  requirements.txt  routes.py
LeaveConnect/LeaveConnect/: init_db.py  requirements.txt
LeaveConnect/LeaveConnect/instance/: leaveconnect.db  local_app.db
LeaveConnect/LeaveConnect/templates/: base.html  calendar.html  landing.html  login.html  manager_dashboard.html  register.html
templates/: 403.html  base.html  dashboard.html  landing.html  login.html  register.html  request_leave.html
